--- a/app/src/main/res/layout/item_final_prize.xml
+++ b/app/src/main/res/layout/item_final_prize.xml
@@ -1,6 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="170dp"
-    android:layout_height="180dp">
+    android:layout_width="0dp"
+    android:layout_height="180dp"
+    android:layout_weight="1">
 
     <!-- Card -->
     <LinearLayout
