--- a/app/src/main/res/layout/layout_challenge_daily_score.xml
+++ b/app/src/main/res/layout/layout_challenge_daily_score.xml
@@ -6,7 +6,7 @@
     android:layout_height="270dp"
     android:layout_marginHorizontal="16dp"
     android:layout_marginTop="16dp"
-    android:visibility="gone">
+    android:visibility="visible">
 
     <com.jetsynthesys.rightlife.ui.GlowGradientCardView
         android:id="@+id/gradientBorder"
@@ -50,6 +50,12 @@
                 android:src="@drawable/forward_icon" />
 
         </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#F7F7F7"
+            android:layout_marginHorizontal="3dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
