Following issues resolved - Face Scan Card added in Challenge - RAD-6832: Android[QA] > Challenge Completed Screen > Challenge Over detail screen > Toolkit, Snap Meal, Log Workout and Log Sleep cards should not be displayed - RAD-6828: Android[QA] > Challenge Completed Screen > Explore Plans button is cut at the bottom - RAD-6826: Android[QA] > Challenge Screen > About the Challenge popup > ThinkRight color is incorrect - RAD-6848: [android][qa][Rightlifechallenge]Incorrect copy is displayed for RightLife Share - RAD-6849: [android][qa][Rightlifechallenge]Incorrect link is shared on email when sharing RightLife - RAD-6823: Android[QA] > Challenge Screen > Your Daily Score Card > Rank text getting cut at bottom - RAD-6870: [android][qa][Rightlifechallenge]Bottom padding is missing on Understanding Score popup - RAD-6859: [android][qa][Rightlifechallenge]User score calculation mismatch between Home dashboard and detail screen - RAD-6869: [android][qa][Rightlifechallenge]Ranking card is missing on Challenge screen when navigated from View Challenge card - RAD-6866: [Android][QA][Challenges] Delay in Join Challenge Popup Display After Login

--- a/app/src/main/res/layout/activity_challenge.xml
+++ b/app/src/main/res/layout/activity_challenge.xml
@@ -131,6 +131,10 @@
                 layout="@layout/layout_share_challenge" />
 
             <include
+                android:id="@+id/faceScanCard"
+                layout="@layout/layout_facescan_challenge" />
+
+            <include
                 android:id="@+id/challengeTasks"
                 layout="@layout/layout_challenge_tasks" />
 
