--- a/app/src/main/res/layout/layout_challenge_daily_score.xml
+++ b/app/src/main/res/layout/layout_challenge_daily_score.xml
@@ -6,7 +6,7 @@
     android:layout_height="270dp"
     android:layout_marginHorizontal="16dp"
     android:layout_marginTop="16dp"
-    android:visibility="visible">
+    android:visibility="gone">
 
     <com.jetsynthesys.rightlife.ui.GlowGradientCardView
         android:id="@+id/gradientBorder"
