--- a/app/src/main/res/layout/activity_challenge_reward.xml
+++ b/app/src/main/res/layout/activity_challenge_reward.xml
@@ -265,7 +265,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginVertical="6dp"
-                android:backgroundTint="@color/light_red"
+                android:backgroundTint="#F7E6B7"
                 app:cardCornerRadius="12dp">
 
                 <RelativeLayout
