--- a/app/src/main/res/layout/layout_rank_empty.xml
+++ b/app/src/main/res/layout/layout_rank_empty.xml
@@ -26,7 +26,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:src="@drawable/img_daily_score" />
+                android:src="@drawable/challenge_icon"
+                android:tint="#F5B829" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -34,8 +35,8 @@
                 android:layout_marginStart="4dp"
                 android:layout_toEndOf="@id/imgChallenge"
                 android:fontFamily="@font/dmsans_bold"
-                android:text="Your Daily Score"
-                android:textColor="@color/menuselected"
+                android:text="Rankings"
+                android:textColor="#F5B829"
                 android:textSize="14sp" />
 
             <ImageView
