Following issues resolved - RAD-6876: [android][qa][Rightlifechallenge]Ranking mismatch between outer ranking card and inner All-Time ranking card - RAD-6877: [android][qa][Rightlifechallenge]Leaderboard rank changes unexpectedly when switching tabs after tapping Leaderboard card - RAD-6890: Android[QA] > Challenge Card > “Why should I complete the tasks?” > the make Score count popup heading alignment issue

--- a/app/src/main/res/layout/bottomsheet_task_info.xml
+++ b/app/src/main/res/layout/bottomsheet_task_info.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/toproundedcornershape"
     android:orientation="vertical"
-    android:padding="@dimen/margin_card_16dp">
+    android:padding="14dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -18,7 +18,7 @@
             android:fontFamily="@font/merriweather_bold"
             android:text="Make The Score Count"
             android:textColor="@color/txt_color_header"
-            android:textSize="24dp" />
+            android:textSize="22dp" />
 
         <ImageView
             android:id="@+id/btnClose"
