Following issues resolved - RAD-6830: Android[QA] > Challenge Completed Screen > Challenge Over detail screen > Rankings card position is not as per design - RAD-6894: Android[QA] > Challenge Card > Waiting Period > Rankings info button showing - RAD-6900: [Android][QA][Challenge] Rank Card displays rank based on Day instead of All Time - RAD-6901: [Android][QA][Challenge] View Leaderboard opens Week section instead of Day - RAD-6902: [Android][QA][My Health] Challenge cards are displayed in My Health section - RAD-6903: [Android][QA][Challenge] Completion tick is not shown after completing all tasks - RAD-6904: [Android][QA][Challenge] User name missing from Top 10 list in Leaderboard - RAD-6906: Android[QA] > Home Page > Challenge Card > Waiting Period > Rankings card border visible against design - RAD-6909: Android[QA] > Home Page > Challenge Card > Challenge Upcoming card shown instead of Challenge Active card - RAD-6919: Android[QA] > Home Page > Challenge Card > Daily Score detail page > Score not updated as per completed tasks - RAD-6911: Android[QA] > Home Page > Challenge Card > Toolkit card missing - RAD-6912: [android][qa][Rightlifechallenge]Time for Check-In Face Scan card UI does not match design specifications - RAD-6917: [android][qa][Rightlifechallenge]Incorrect points are awarded for Full Day Bonus task - RAD-6916: [android][QA][RIGHTLIFECHALLENGE]Score points calculation is incorrect - RAD-6747: [android][production][profile]Resend OTP button appears disabled but is still clickable on Email ID OTP screen

--- a/app/src/main/res/layout/activity_challenge.xml
+++ b/app/src/main/res/layout/activity_challenge.xml
@@ -113,6 +113,9 @@
                 android:id="@+id/challengeOverCard"
                 layout="@layout/layout_challenge_over" />
 
+            <include
+                android:id="@+id/rankingCardTop"
+                layout="@layout/layout_rank_challenge_top" />
 
             <include
                 android:id="@+id/scoreCard"
