--- a/app/src/main/res/layout/layout_challenge_to_complete_checklist.xml
+++ b/app/src/main/res/layout/layout_challenge_to_complete_checklist.xml
@@ -35,6 +35,7 @@
                 app:tint="#F5B829" />
 
             <TextView
+                android:id="@+id/tvChallenge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
