Following issues resolved - RAD-6937: Android: Challenge card: In Daily Score Card Add text 'Daily' next to Rank 'Daily Rank' - RAD-6939: [Android]rankings card, title will All-Time Rankings and the Rank here will be all time ranking of the user - RAD-6848: [android][qa][Rightlifechallenge]Incorrect copy is displayed for RightLife Share - RAD-6943: [android][qa][rightlifechallenge]Tasks and bonus tasks are shown as completed when challenge is locked - RAD-6652: [android][qa][thinkright]Affirmation practice count not updating on Mindful Analysis detailed screen - RAD-6746: [android][production][profile]Email ID shows as already registered when user exits without saving after linking email to mobile number account - RAD-6949: [android][qa][Rightlifechallenge]Incorrect card is displayed for locked challenge on Challenge screen

--- a/app/src/main/res/layout/layout_rank_empty.xml
+++ b/app/src/main/res/layout/layout_rank_empty.xml
@@ -7,8 +7,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
         android:background="@drawable/rounded_corder_border_gray"
+        android:backgroundTint="@color/white"
+        android:clipToPadding="false"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -31,7 +32,7 @@
                 android:layout_marginStart="4dp"
                 android:layout_toEndOf="@id/imgChallenge"
                 android:fontFamily="@font/dmsans_bold"
-                android:text="Rankings"
+                android:text="All-Time Rankings"
                 android:textColor="#F5B829"
                 android:textSize="14sp" />
 
@@ -41,7 +42,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:src="@drawable/info_challenge"
-                android:visibility="gone"/>
+                android:visibility="gone" />
 
         </RelativeLayout>
 
