--- a/app/src/main/res/layout/layout_rank_challenge.xml
+++ b/app/src/main/res/layout/layout_rank_challenge.xml
@@ -38,7 +38,7 @@
             android:layout_marginStart="4dp"
             android:layout_toEndOf="@id/imgChallenge"
             android:fontFamily="@font/dmsans_bold"
-            android:text="Rankings"
+            android:text="All-Time Rankings"
             android:textColor="#FFFFFF"
             android:textSize="16sp" />
 
