--- a/app/src/main/res/layout/layout_score_card.xml
+++ b/app/src/main/res/layout/layout_score_card.xml
@@ -312,7 +312,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/dmsans_regular"
-                    android:text="Rank"
+                    android:text="Daily Rank"
                     android:textColor="#747474"
                     android:textSize="12sp" />
 
