--- a/app/src/main/res/layout/layout_score_card.xml
+++ b/app/src/main/res/layout/layout_score_card.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout_score_card"
     android:layout_width="match_parent"
     android:layout_height="350dp"
-    android:layout_marginTop="16dp">
+    android:layout_marginTop="16dp"
+    android:visibility="gone">
 
     <com.jetsynthesys.rightlife.ui.GlowGradientCardView
         android:id="@+id/gradientBorder"
