--- a/app/src/main/res/layout/fragment_think_right_landing.xml
+++ b/app/src/main/res/layout/fragment_think_right_landing.xml
@@ -309,14 +309,14 @@
                                 android:orientation="vertical">
 
                                 <TextView
+                                    android:id="@+id/tv_mindfull_minute"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text=""
-                                    android:id="@+id/tv_mindfull_minute"
-                                    android:textSize="20sp"
-                                    android:fontFamily="@font/dmsans_bold"
                                     android:layout_gravity="center"
-                                    android:textColor="@color/eatright_text_color" />
+                                    android:fontFamily="@font/dmsans_bold"
+                                    android:text=""
+                                    android:textColor="@color/eatright_text_color"
+                                    android:textSize="20sp" />
 
                                 <TextView
                                     android:layout_width="wrap_content"
@@ -359,7 +359,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="03 days"
+                                    android:text=""
                                     android:id="@+id/tv_wellness_days"
                                     android:textSize="20sp"
                                     android:fontFamily="@font/dmsans_bold"
