--- a/app/src/main/res/layout/bottomsheet_height_picker.xml
+++ b/app/src/main/res/layout/bottomsheet_height_picker.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="#F5F5F5"
+    android:background="@drawable/toproundedcornershape"
+    android:backgroundTint="#F5F5F5"
     android:padding="10dp">
 
     <RelativeLayout
