--- a/app/src/main/res/layout/fragment_height_selection.xml
+++ b/app/src/main/res/layout/fragment_height_selection.xml
@@ -9,6 +9,203 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/merriweather_bold"
+        android:text="What's your height?"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="16dp"
+        android:textColor="@color/txt_color_header"
+        android:textSize="26sp" />
+
+    <TextView
+        android:id="@+id/tv_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:fontFamily="@font/dmsans_regular"
+        android:text="Knowing your height helps RightLife calculate key health metrics for a personalised journey."
+        android:textColor="@color/txt_color_header"
+        android:textSize="16sp" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view_age_selector"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:elevation="8dp"
+        app:cardCornerRadius="25dp"
+        android:layout_marginBottom="-12dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_marginTop="20dp"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:id="@+id/toggleContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:orientation="horizontal"
+                    android:padding="2dp"
+                    android:layout_marginHorizontal="60dp"
+                    android:layout_centerHorizontal="true">
+
+                    <TextView
+                        android:id="@+id/feetOption"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="ft.in"
+                        android:fontFamily="@font/dmsans_bold"
+                        android:textSize="16sp"
+                        android:textColor="@color/black"
+                        android:background="@drawable/bg_left_unselected" />
+
+                    <TextView
+                        android:id="@+id/cmsOption"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="cm"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/dmsans_bold"
+                        android:textColor="@color/white"
+                        android:background="@drawable/bg_right_selected" />
+                </LinearLayout>
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:id="@+id/ll_main_ruler"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="200dp"
+                android:padding="16dp">
+
+                <TextView
+                    android:id="@+id/selected_number_text"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:gravity="center_horizontal"
+                    android:textSize="@dimen/textsize_large24sp"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/dmsans_bold"
+                    android:layout_height="wrap_content"
+                    android:text="5 Ft 10 In" />
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:background="#F2F2F2"
+                    android:layout_weight="1"
+                    android:id="@+id/rl_ruler_container"
+                    android:layout_gravity="center_vertical"
+                    android:layout_height="match_parent">
+
+                    <ScrollView
+                        android:id="@+id/scrollView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_centerVertical="true"
+                        android:scrollbars="none"
+                        android:fadeScrollbars="true"
+                        android:clipToPadding="false">
+
+                        <com.jetsynthesys.rightlife.ui.customviews.HeightPickerView
+                            android:id="@+id/pickerView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+
+                    </ScrollView>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:layout_weight="1"
+                        android:id="@+id/ll_marker_view"
+                        android:layout_centerVertical="true"
+                        android:orientation="vertical">
+
+                        <View
+                            android:id="@+id/markerView"
+                            android:layout_width="70dp"
+                            android:layout_height="5dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@android:color/holo_red_light" />
+
+                        <View
+                            android:id="@+id/markerViewdummy"
+                            android:layout_width="match_parent"
+                            android:layout_height="2dp"
+                            android:background="@android:color/transparent"
+                            android:layout_marginEnd="80dp" />
+                    </LinearLayout>
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btn_continue"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="36dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="36dp"
+                android:layout_marginBottom="36dp"
+                android:backgroundTint="@color/menuselected"
+                android:fontFamily="@font/dmsans_bold"
+                android:text="@string/str_continue"
+                android:textColor="@color/white"
+                android:textSize="@dimen/textsize_large"
+                android:layout_alignParentBottom="true" />
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:id="@+id/ll_selected_height"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/tv_selected_height"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/dmsans_regular"
+            android:textColor="@color/color_green"
+            android:text="5ft 4in"
+            android:textSize="24sp" />
+
+    </LinearLayout>
+
+</LinearLayout>
+<!--
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/merriweather_bold"
         android:text="What’s your height?"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
@@ -129,7 +326,7 @@
                         android:id="@+id/ll_marker_view"
                         android:layout_centerVertical="true"
                         android:orientation="vertical">
-                        <!-- Line that will be drawn at different sizes based on the number -->
+                        &lt;!&ndash; Line that will be drawn at different sizes based on the number &ndash;&gt;
                         <View
                             android:id="@+id/markerView"
                             android:layout_width="match_parent"
@@ -191,4 +388,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</LinearLayout>-->
