--- a/app/src/main/res/layout/fragment_weight_selection.xml
+++ b/app/src/main/res/layout/fragment_weight_selection.xml
@@ -12,6 +12,215 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:fontFamily="@font/merriweather_bold"
+        android:text="What's your current weight?"
+        android:textColor="@color/txt_color_header"
+        android:textSize="26sp" />
+
+    <TextView
+        android:id="@+id/tv_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:fontFamily="@font/dmsans_regular"
+        android:text="Your weight is just a number - it helps RightLife to guide you toward your health goals."
+        android:textColor="@color/txt_color_header"
+        android:textSize="16sp" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view_age_selector"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="-12dp"
+        android:elevation="8dp"
+        app:cardCornerRadius="25dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:id="@+id/rl_switch"
+                android:layout_width="match_parent"
+                android:layout_marginTop="20dp"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:id="@+id/toggleContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:orientation="horizontal"
+                    android:padding="2dp"
+                    android:layout_marginHorizontal="60dp"
+                    android:layout_centerHorizontal="true">
+
+                    <TextView
+                        android:id="@+id/kgOption"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="kg"
+                        android:fontFamily="@font/dmsans_bold"
+                        android:textSize="16sp"
+                        android:textColor="@color/black"
+                        android:background="@drawable/bg_left_unselected" />
+
+                    <TextView
+                        android:id="@+id/lbsOption"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="lbs"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/dmsans_bold"
+                        android:textColor="@color/white"
+                        android:background="@drawable/bg_right_selected" />
+                </LinearLayout>
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/selected_number_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/rl_ruler_container"
+                android:layout_below="@id/rl_switch"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:layout_marginBottom="50dp"
+                android:fontFamily="@font/dmsans_bold"
+                android:gravity="center"
+                android:textSize="@dimen/textsize_large24sp"
+                android:textStyle="bold"
+                android:text="50 kg"/>
+
+            <RelativeLayout
+                android:id="@+id/rl_ruler_container"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="36dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="36dp"
+                android:layout_marginBottom="120dp"
+                android:background="#F2F2F2">
+
+                <HorizontalScrollView
+                    android:id="@+id/scrollView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scrollbars="none"
+                    android:fadeScrollbars="true"
+                    android:clipToPadding="false">
+
+                    <com.jetsynthesys.rightlife.ui.customviews.WeightPickerView
+                        android:id="@+id/pickerView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"/>
+
+                </HorizontalScrollView>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_centerInParent="true"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <View
+                        android:id="@+id/ruler_line"
+                        android:layout_width="5dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginBottom="40dp"
+                        android:layout_weight="1"
+                        android:background="@android:color/holo_red_light" />
+
+                    <View
+                        android:id="@+id/ruler_line_small"
+                        android:layout_width="2dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginBottom="100dp"
+                        android:layout_weight="1"
+                        android:background="@android:color/black"
+                        android:visibility="gone" />
+
+                    <TextView
+                        android:id="@+id/number_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:gravity="center"
+                        android:text="number "
+                        android:textColor="@android:color/black"
+                        android:textSize="18sp"
+                        android:visibility="gone" />
+                </LinearLayout>
+            </RelativeLayout>
+
+            <Button
+                android:id="@+id/btn_continue"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="36dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="36dp"
+                android:layout_marginBottom="36dp"
+                android:backgroundTint="@color/menuselected"
+                android:fontFamily="@font/dmsans_bold"
+                android:text="@string/str_continue"
+                android:textColor="@color/white"
+                android:textSize="@dimen/textsize_large" />
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:id="@+id/ll_selected_weight"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="32dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/tv_selected_weight"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/dmsans_regular"
+            android:text="48kg"
+            android:textColor="@color/color_green"
+            android:textSize="24sp" />
+
+    </LinearLayout>
+
+</LinearLayout>
+<!--
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:fontFamily="@font/merriweather_bold"
         android:text="What’s your current weight?"
         android:textColor="@color/txt_color_header"
         android:textSize="26sp" />
@@ -123,7 +332,7 @@
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <!-- Line that will be drawn at different sizes based on the number -->
+                    &lt;!&ndash; Line that will be drawn at different sizes based on the number &ndash;&gt;
                     <View
                         android:id="@+id/ruler_line"
                         android:layout_width="5dp"
@@ -147,7 +356,7 @@
                         android:background="@android:color/black"
                         android:visibility="gone" />
 
-                    <!-- Number Text -->
+                    &lt;!&ndash; Number Text &ndash;&gt;
                     <TextView
                         android:id="@+id/number_text"
                         android:layout_width="wrap_content"
@@ -202,4 +411,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</LinearLayout>-->
