Following issues resolved - time zone parameter added in mindfullness post API in Practise Affirmation, Breathing Practise and Journaling - RAD-6982: Android[QA] > Leaderboard Screen > 2nd rank number button background color not as per design - RAD-6987: [android][qa][Rightlifechallenge]Trophy icon and separator line are missing on All-Time Rankings card when challenge is locked - RAD-6986: [android][qa][Rightlifechallenge]trophy icon is displayed on ShareRightLife card when challenge is locked

--- a/app/src/main/res/layout/layout_rank_empty.xml
+++ b/app/src/main/res/layout/layout_rank_empty.xml
@@ -2,13 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="270dp"
-    android:layout_marginTop="16dp">
+    android:layout_marginTop="16dp"
+    android:background="@drawable/rounded_corder_border_gray">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/rounded_corder_border_gray"
-        android:backgroundTint="@color/white"
+        android:background="@drawable/bg_challenge"
         android:clipToPadding="false"
         android:orientation="vertical">
 
@@ -52,16 +52,29 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="130dp"
                 android:layout_centerInParent="true"
                 android:gravity="center_horizontal|top"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/icon_lock_challenge" />
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/icon_lock_challenge" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginTop="10dp"
+                        android:background="#F7F7F7" />
+                </RelativeLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
