--- a/app/src/main/res/layout/user_rank_row.xml
+++ b/app/src/main/res/layout/user_rank_row.xml
@@ -21,8 +21,7 @@
             android:id="@+id/flRank"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/circle_background"
-            android:backgroundTint="@color/white_plain">
+            android:background="@drawable/circle_background">
 
             <TextView
                 android:id="@+id/tvRank"
