--- a/app/src/main/res/layout/item_leaderboard_row.xml
+++ b/app/src/main/res/layout/item_leaderboard_row.xml
@@ -24,7 +24,7 @@
             android:id="@+id/flRank"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:background="@drawable/leaderbaord_1">
+            android:background="@drawable/circle_background">
 
             <TextView
                 android:id="@+id/tvRank"
