--- a/app/src/main/res/layout/layout_challenge_countdown_timer.xml
+++ b/app/src/main/res/layout/layout_challenge_countdown_timer.xml
@@ -82,6 +82,7 @@
                 android:textSize="32sp" />
 
             <TextView
+                android:id="@+id/tvDaysToGo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="2dp"
