- Border Issue resolved for Challenge Ranking card on Challenge Screen before State Date - Mindful minutes issue resolved

--- a/app/src/main/res/layout/layout_rank_empty.xml
+++ b/app/src/main/res/layout/layout_rank_empty.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="270dp"
     android:layout_marginTop="16dp"
-    android:background="@drawable/rounded_corder_border_gray">
+    android:background="@drawable/rounded_corder_border_gray"
+    android:backgroundTint="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:src="@drawable/challenge_icon"
-                android:tint="#F5B829" />
+                app:tint="#F5B829" />
 
             <TextView
                 android:layout_width="wrap_content"
