--- a/app/src/main/res/layout/article_item_row.xml
+++ b/app/src/main/res/layout/article_item_row.xml
@@ -170,7 +170,7 @@
         android:id="@+id/card2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardview_service"
